[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Christopher Leonardo de Oliveira <christopherldo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
